[package]
name = "disk-drive"
description = "multi-disk utilities for floppy-disk!"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/queer/disk-drive"
keywords = ["floppy-disk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
floppy-disk = "0.2.3"
nyoom = "0.3.3"
tokio = { version = "1.28.2", features = ["io-util"] }
tracing = "0.1.37"
